--- a/travelApp/View/Base.lproj/Main.storyboard
+++ b/travelApp/View/Base.lproj/Main.storyboard
@@ -12,17 +12,18 @@
         <scene sceneID="6cl-H4-SaH">
             <objects>
                 <tabBarController id="N5g-h3-nF8" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="LAV-8K-TIr"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" itemPositioning="centered" itemSpacing="10" itemWidth="60" id="bgu-Ub-Ctd">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="099-Ba-wNw" kind="relationship" relationship="viewControllers" id="3XQ-cd-l9V"/>
-                        <segue destination="kpq-OV-vxR" kind="relationship" relationship="viewControllers" id="uyR-Ev-gop"/>
-                        <segue destination="pV6-WZ-pFH" kind="relationship" relationship="viewControllers" id="TQA-EW-nzk"/>
-                        <segue destination="UpB-wI-GCV" kind="relationship" relationship="viewControllers" id="29z-zA-tXa"/>
-                        <segue destination="T69-5T-V1c" kind="relationship" relationship="viewControllers" id="NkW-0E-yTL"/>
+                        <segue destination="099-Ba-wNw" kind="relationship" relationship="viewControllers" id="qhb-Jw-REd"/>
+                        <segue destination="kpq-OV-vxR" kind="relationship" relationship="viewControllers" id="iOy-ru-4st"/>
+                        <segue destination="pV6-WZ-pFH" kind="relationship" relationship="viewControllers" id="FX3-Oa-J6r"/>
+                        <segue destination="UpB-wI-GCV" kind="relationship" relationship="viewControllers" id="dqK-wO-mVz"/>
+                        <segue destination="T69-5T-V1c" kind="relationship" relationship="viewControllers" id="dcj-fy-RsJ"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GFr-4f-mf6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -39,7 +40,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="Hoj-fk-EDa" kind="relationship" relationship="rootViewController" id="wad-7A-7bF"/>
+                        <segue destination="Hoj-fk-EDa" kind="relationship" relationship="rootViewController" id="tAd-Cx-kE8"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YoW-6r-bjt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -262,22 +263,79 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="y1K-jE-lne">
-                                <rect key="frame" x="81" y="278" width="97" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DiL-Ta-8Nd">
-                                <rect key="frame" x="201" y="313" width="46" height="97"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="buttonTapped:" destination="G6b-Bv-j7I" eventType="touchUpInside" id="Zjq-Wc-D5Z"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="OV1-Ba-TPX">
+                                <rect key="frame" x="40" y="88" width="334" height="160"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="CPt-TB-6w8">
+                                        <rect key="frame" x="0.0" y="0.0" width="334" height="80"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set your currency:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kc4-hx-zcd">
+                                                <rect key="frame" x="0.0" y="30" width="140.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.99372535939999995" green="0.99383682009999996" blue="0.99366122479999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="y1K-jE-lne">
+                                                <rect key="frame" x="163.5" y="23" width="97.5" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DiL-Ta-8Nd">
+                                                <rect key="frame" x="284" y="15" width="50" height="50"/>
+                                                <color key="backgroundColor" red="0.79016572240000005" green="0.91086930040000003" blue="0.99709588289999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="kMX-eY-qsd"/>
+                                                    <constraint firstAttribute="width" secondItem="DiL-Ta-8Nd" secondAttribute="height" multiplier="1:1" id="wuU-Vd-FP5"/>
+                                                </constraints>
+                                                <state key="normal" title="Ok">
+                                                    <color key="titleColor" red="0.99372535939999995" green="0.99383682009999996" blue="0.99366122479999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="buttonTapped:" destination="G6b-Bv-j7I" eventType="touchUpInside" id="Zjq-Wc-D5Z"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="80" id="x0k-dj-PL3"/>
+                                        </constraints>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="ONb-Pg-Xod">
+                                        <rect key="frame" x="0.0" y="80" width="334" height="80"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set your currency:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KiF-O7-oPb">
+                                                <rect key="frame" x="0.0" y="30" width="261" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.99372535939999995" green="0.99383682009999996" blue="0.99366122479999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ROX-JN-bYk">
+                                                <rect key="frame" x="284" y="15" width="50" height="50"/>
+                                                <color key="backgroundColor" red="0.79016572240000005" green="0.91086930040000003" blue="0.99709588289999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="4c7-NP-XPS"/>
+                                                    <constraint firstAttribute="width" secondItem="ROX-JN-bYk" secondAttribute="height" multiplier="1:1" id="D7I-Qc-YND"/>
+                                                </constraints>
+                                                <state key="normal" title="Ok">
+                                                    <color key="titleColor" red="0.99372535939999995" green="0.99383682009999996" blue="0.99366122479999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="buttonTapped:" destination="G6b-Bv-j7I" eventType="touchUpInside" id="gv6-FS-Ldh"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="80" id="uAq-21-0xd"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="OV1-Ba-TPX" firstAttribute="top" secondItem="0ni-VF-mJi" secondAttribute="top" id="dkI-DP-9aR"/>
+                            <constraint firstItem="OV1-Ba-TPX" firstAttribute="leading" secondItem="0ni-VF-mJi" secondAttribute="leading" constant="40" id="hS7-Ut-rBe"/>
+                            <constraint firstItem="0ni-VF-mJi" firstAttribute="trailing" secondItem="OV1-Ba-TPX" secondAttribute="trailing" constant="40" id="lyx-Nm-EkD"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="0ni-VF-mJi"/>
                     </view>
                     <navigationItem key="navigationItem" title="Settings" id="U6G-wZ-5Wg"/>
